--- a/afta_cv.html
+++ b/afta_cv.html
@@ -22,7 +22,7 @@
                 <p><strong>Pendidikan:</strong></p>
                 <ul>
                     <li>Mahasiswa Universitas Indraprasta PGRI (Semester 5)</li>
-                    <li>SMA N 1 Ulujami Pemalang(2019-2021</li>
+                    <li>SMA N 1 Ulujami Pemalang(2019-2021) </li>
                 </ul>
                 <h2>Hobi</h2>
                 <p>Berlatih Pencak Silat, Badminton</p>
@@ -49,7 +49,7 @@
                     <li>Juara 3 Piala Walikota Kabupaten Pekalongan (2016)</li>
                     <li>Juara 1 IPSI Kota Pekalongan (2017)</li>
                     <li>Juara 1 Kejurda Kab.Pekalongan & Kab.Pemalang (2017-2018)</li>
-                    <li>Juara 1 POPDA Kabupaten Pemalang (2018 dan 2019)</li>
+                    <li>Juara 2 & 1 POPDA Kabupaten Pemalang (2018 dan 2019)</li>
                     <li>Juara 1 PORDA Kabupaten Pemalang (2020)</li>
                     <li>Juara 1 Karesidenan Pekalongan (2021)</li>
                     <li>Juara 2 Banten Open</li>
