--- a/afta_cv.html
+++ b/afta_cv.html
@@ -17,17 +17,19 @@
                 <h1>Afta Aulia Mifda</h1>
                 <p><strong>Posisi:</strong> Coach Ekskul Pencak Silat</p>
                 <h2>Informasi Pribadi</h2>
-                <p><strong>Email:</strong> <a href="mailto:aftaam6@gmail.com">aftaam6@gmail.com</a></p>
-                <p><strong>WhatsApp:</strong> <a href="https://wa.me/6285781025125">085781025125</a></p>
-                <p><strong>Pendidikan:</strong></p>
+                <p> </p>>
+                <h2><strong>Pendidikan:</strong></h2>
                 <ul>
                     <li>Mahasiswa Universitas Indraprasta PGRI (Semester 5)</li>
                     <li>SMA N 1 Ulujami Pemalang(2019-2021) </li>
                 </ul>
                 <h2>Hobi</h2>
-                <p>Berlatih Pencak Silat, Badminton</p>
+                <p>Berlatih Pencak Silat, Badminton, Membaca</p>
                 <h2>Motto Hidup</h2>
                 <p>"Kerja keras tidak akan mengkhianati hasil."</p>
+                <h2>Kontak</h2>
+                <p><strong>Email:</strong> <a href="mailto:aftaam6@gmail.com">aftaam6@gmail.com</a></p>
+                <p><strong>WhatsApp:</strong> <a href="https://wa.me/6285781025125">085781025125</a></p>
             </div>
         </div>
 
