--- a/afta_cv.html
+++ b/afta_cv.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV Afta Aulia Mifda</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <div class="container">
@@ -30,6 +30,7 @@
                 <p>Berlatih Pencak Silat, Membaca, dan Melatih Atlet</p>
                 <h2>Motto Hidup</h2>
                 <p>"Kerja keras tidak akan mengkhianati hasil."</p>
+                
             </div>
         </div>
 
