--- a/afta_cv.html
+++ b/afta_cv.html
@@ -29,7 +29,7 @@
                 <h2>Hobi</h2>
                 <p>Berlatih Pencak Silat, Membaca, dan Melatih Atlet</p>
                 <h2>Motto Hidup</h2>
-                <p>"Kerja keras tidak akan mengkhianati hasil."</p>
+                <p>"Mengukir kesuksesan dengan usaha, kreativitas, dan kerja keras untuk masa depan yang lebih baik."</p>
                 
             </div>
         </div>
