--- a/Afta.html
+++ b/Afta.html
@@ -11,7 +11,7 @@
         <div class="header-container">
             <img src="afta_profile.jpg" alt="Foto Afta Aulia Mifda" class="profile-pic">
             <h1>Afta Aulia Mifda</h1>
-            <p>Calon Coach Ekskul Pencak Silat SD</p>
+            <p>Pemalang, 22 September 2003</p></p>
         </div>
     </header>
 
