--- a/Afta.html
+++ b/Afta.html
@@ -20,7 +20,7 @@
             <h2>Tentang Saya</h2>
             <p><strong>Pendidikan:</strong> SMA N 1 Ulujami Pemalang</p>
             <p><strong>Mahasiswa:</strong> Universitas Indraprasta PGRI (Semester 5)</p>
-            <p><strong>Status:</strong> Lajang</p>
+            <p><strong>Strategi:</strong> Kepemimpinan, pelatihan taktis, pengembangan atlet muda.</p>
         </section>
 
         <section class="experience">
